# self-ai

./: .woodpecker.yaml  README.md  common  create-instance  flake.nix  launch-llm  launch-whisper  llm-models.yml  produce-srt  pyproject.toml
.github/workflows/: push-image.yml
nix/: base-image.nix  container-image.nix
nix/cuda/: fixes-overlay.nix  pkgs-for-capability.nix
nix/services/: default.nix  easycontrol.nix
workspace/: flake.nix  pyproject.toml
workspace/tests/: test_prime.py
